--- a/frontend/src/app/components/shared/nav/nav.component.html
+++ b/frontend/src/app/components/shared/nav/nav.component.html
@@ -16,6 +16,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cart">Cart
+          </a>
+        </li>
+
       </ul>
     </div>
   </nav>
